# RustStrom

./: .dockerignore  .gitignore  ARCHITECTURE_AUDIT.md  BENCHMARK_REPORT.md  BENCHMARK_RESULTS_2025.md  Cargo.toml  DOCKER_SETUP.md  Dockerfile  PERFORMANCE.md  README.md  START_DASHBOARD.md  architecture.mdx  benchmark.sh  docker-compose.yml  docker-config.toml  install.sh  installer.sh  load-balancer-rs.service  rust-strom.service  start-all.sh  test-config.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yaml  release.yml  rust.yml
configs/: config.toml  loadbalancer.toml
ruststrom-dashboard/: .gitignore  Dockerfile  README.md  config-api.cjs  index.html  nginx.conf  package.json  vite.config.js
ruststrom-dashboard/src/: App.vue  style.css
ruststrom-dashboard/src/components/: AdvancedMetricsTab.vue  BackendsTab.vue  ConfigTab.vue  LogsTab.vue  MetricsTab.vue  OverviewTab.vue
src/: acme.rs  backend_pool_matcher.rs  config.rs  configuration.rs  connection_handler.rs  error_response.rs  health.rs  http_client.rs  listeners.rs  logging.rs  main.rs  metrics.rs  server.rs  tcp_balancer.rs  tls.rs  udp_balancer.rs  utils.rs
src/algorithms/: ip_hash.rs  least_connection.rs  mod.rs  random.rs  round_robin.rs  sticky_cookie.rs
src/middleware/: authentication.rs  compression.rs  custom_error_pages.rs  https_redirector.rs  maxbodysize.rs  mod.rs  rate_limiter.rs
test-data/: index.html
