[package]
name = "rust-strom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acme-lib = "0.8"
arc-swap = "1.2"
async-compression = { version = "0.4.4", features = ["brotli", "deflate", "gzip", "tokio"] }
async-stream = "0.3"
async-trait = "0.1"
bytes = "1.5.0"
chrono = "0.4"
clap = "2.21"
cookie = "0.17"
futures = "0.3"
futures-util = "0.3"
fnv = "1.0.7"
gethostname = "0.4.3"
http-auth-basic = "0.3.3"
hyper = { version = "0.14", features = ["client", "server", "http1", "http2", "stream"] }
hyper-rustls = "0.24.1"
hyper-timeout = "0.4"
ldap3 = "0.11.3"
linked-hash-map = "0.5"
lazy_static = "1.4"
log = "0.4"
log4rs = "1.0"
lru = "0.12.0"
notify = "4.0"
openssl-sys = { version = "0.9", features = ["vendored"] }
pin-project = "1.0"
pom = "3.2"
prometheus = "0.13.3"
rand = "0.8"
regex = "1.4"
serde = { version = "1.0", features = ["derive"] }
tokio = {version = "1.0", features = ["full"] }
tokio-rustls = "0.22"
tokio-test = "0.4"
tokio-util = { version = "0.7.9", features = ["full"] }
toml = { version = "0.5.11", features = ["preserve_order"] }
url = "2.2"
warp = "0.3.6"

# [future-incompat-report]
# frequency = "always"    